infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: producer-animation
  labels:
    name: producer-animation
